services/rabbitmq/manifests/rabbitmq-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq  # Name of the StatefulSet
  namespace: rabbitmq-message
spec:
  serviceName: "not-applicable"
  selector:
    matchLabels:
      app: rabbitmq  # Selector to match pods belonging to this StatefulSet
  replicas: 1  # Number of RabbitMQ instances (adjust as needed)
  template:
    metadata:
      labels:
        app: rabbitmq  # Labels applied to pods
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management  # RabbitMQ image with management UI included
          ports:
            - name: http                 # Management UI port
              protocol: TCP
              containerPort: 15672
            - name: amqp                 # AMQP protocol port for messaging
              protocol: TCP
              containerPort: 5672
          volumeMounts:
            - name: rabbitmq-volume
              mountPath: /var/lib/rabbitmq  # Data directory for RabbitMQ persistence
      volumes:
        - name: rabbitmq-volume
          persistentVolumeClaim:
            claimName: rabbitmq-pvc  # Persistent volume claim to persist RabbitMQ data across pod restarts
